# InputActor

./: .gitignore  README.md  build_cpp.bat  build_exe.bat  main.py  requirements.txt
20260218_232051/: input.jsonl
cpp_actor/: CMakeLists.txt  README.md
cpp_actor/src/: main.cpp  resources.h  resources.rc.in
example/: input-gamepad.jsonl
input_actor/: __init__.py  gamepad.py  gui.py  hotkeys.py  models.py  player.py  vigembus.py  win_input.py
tools/: fetch_vigembus.ps1
